# foxhole

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/foxhole-core/: Cargo.toml
crates/foxhole-core/src/: burn.rs  config.rs  lib.rs  mnemonic.rs  notes.rs  zones.rs
crates/foxhole-core/src/app/: boot.rs  browser.rs  conversations.rs  intel.rs  map.rs  mod.rs  network.rs  tests.rs
crates/foxhole-core/src/domain/: mod.rs
crates/foxhole-cot/: Cargo.toml
crates/foxhole-cot/src/: affiliation.rs  event.rs  iso8601.rs  lib.rs  xml.rs
crates/foxhole-map/: Cargo.toml
crates/foxhole-map/src/: cities.rs  geo.rs  lib.rs  mgrs.rs  view.rs  zones.rs
crates/foxhole-micron/: Cargo.toml
crates/foxhole-micron/src/: lib.rs
crates/foxhole-net/: Cargo.toml
crates/foxhole-net/src/: intel_store.rs  lib.rs  net.rs  store.rs
crates/foxhole-tui/: Cargo.toml
crates/foxhole-tui/src/: lib.rs  splash.rs
crates/foxhole-tui/src/ui/: browser.rs  chrome.rs  conversations.rs  guide.mu  map.rs  mod.rs  network.rs  notes.rs  popups.rs  style.rs  tests.rs  views.rs  widgets.rs
crates/foxhole-tui/tests/: guide_smoke.rs
docs/: intel-sharing.md  lxmf-integration.md  rsreticulum-delivery-proof-issue.md
prototypes/compose-textarea/: Cargo.toml  README.md
prototypes/compose-textarea/src/: main.rs
src/: app.rs  intel_store.rs  main.rs  micron.rs  net.rs  storage.rs  store.rs  ui.rs
src/app/: tests.rs
src/ui/: browser.rs  conversations.rs  popups.rs  style.rs
tools/: cot_inject.py
