[package]
name = "foxhole"
version = "0.1.0"
edition = "2024"
description = "FoxHole — off-grid, keyboard-only, monochrome LXMF comms terminal"

[workspace]
members = ["crates/foxhole-micron", "crates/foxhole-cot", "crates/foxhole-map", "crates/foxhole-core", "crates/foxhole-tui"]

[dependencies]
# --- FoxHole's own layers (workspace member crates) ---------------------------
# Domain model + state machine (logic only) and the terminal UI (rendering only).
# The binary wires them to the runtime and, under `net`, the live protocol stack.
foxhole-core = { path = "crates/foxhole-core" }
foxhole-tui = { path = "crates/foxhole-tui" }
# CoT codec for the intel-sharing layer; `net.rs` parses inbound `cot/xml`
# payloads with it. Dependency-free, so it costs nothing in the offline build.
foxhole-cot = { path = "crates/foxhole-cot" }

# TUI framework. The crossterm backend is enabled by default.
ratatui = "0.30"

# Terminal control + async input. `event-stream` gives us `EventStream`, a
# futures Stream of input events we can multiplex with network I/O via select!.
crossterm = { version = "0.29", features = ["event-stream"] }

# Async runtime: keeps network packet processing off the render path.
tokio = { version = "1", features = ["full"] }

# Provides `StreamExt::next()` for crossterm's `EventStream` (tokio-family,
# lightweight). Avoids pulling the full `futures` crate just for one combinator.
tokio-stream = "0.1"

# --- Protocol layer (live, behind the `net` feature) ---------------------------
# LXMF messaging over Reticulum. Both upstreams are Cargo *workspaces* of path
# crates (no `rslxmf`/`rsreticulum` package exists), so we depend on the member
# crates directly from their git repos, pinned by commit for reproducibility
# (an AGPL combined work — see docs/lxmf-integration.md). `rsLXMF` itself depends
# on the `rsReticulum` crates, so cargo unifies both on the same pinned revisions.
#
# Optional so the default build stays dependency-light and offline; `--features net`
# pulls the whole stack and arms `src/net.rs`.
rns-crypto    = { git = "https://github.com/doubleailes/rsReticulum", rev = "3b91b36f3ec7b3769327e0dd06003875953e81ee", optional = true }
rns-wire      = { git = "https://github.com/doubleailes/rsReticulum", rev = "3b91b36f3ec7b3769327e0dd06003875953e81ee", optional = true }
rns-identity  = { git = "https://github.com/doubleailes/rsReticulum", rev = "3b91b36f3ec7b3769327e0dd06003875953e81ee", optional = true }
rns-transport = { git = "https://github.com/doubleailes/rsReticulum", rev = "3b91b36f3ec7b3769327e0dd06003875953e81ee", optional = true }
rns-interface = { git = "https://github.com/doubleailes/rsReticulum", rev = "3b91b36f3ec7b3769327e0dd06003875953e81ee", optional = true }
rns-runtime   = { git = "https://github.com/doubleailes/rsReticulum", rev = "3b91b36f3ec7b3769327e0dd06003875953e81ee", optional = true }
lxmf-core     = { git = "https://github.com/doubleailes/rsLXMF",      rev = "90e44916a403cfea2446aa945275f42233fd0169", optional = true }

# `bytes::Bytes` is the wire-buffer type the transport's `OutboundRequest` takes.
bytes = { version = "1", optional = true }

# Hex-encode 16-byte destination hashes for display and conversation keys.
hex = { version = "0.4", optional = true }

# Encode Nomad Network form submissions as the msgpack request map. Already in
# the lockfile transitively via the `rns-*`/`lxmf` stack.
rmpv = { version = "1.3", optional = true }

[features]
default = ["splash"]
# Native cold-boot splash: a text-only bring-up sequence that doubles as a live
# readiness monitor (see crates/foxhole-tui/src/splash.rs). Pure ASCII, no extra
# dependencies — the feature only gates FoxHole's own code; `--no-default-features`
# drops it. Forwarded to the core (state) and tui (renderer) crates.
splash = ["foxhole-core/splash", "foxhole-tui/splash"]
# Live LXMF/Reticulum protocol stack. Flips the status bar to NET:ON and brings up
# the real transport + LXMF router in `src/net.rs` (see docs/lxmf-integration.md).
# Also enables the matching net-only cfg gating in the core/tui crates.
net = [
    "dep:rns-crypto",
    "dep:rns-wire",
    "dep:rns-identity",
    "dep:rns-transport",
    "dep:rns-interface",
    "dep:rns-runtime",
    "dep:lxmf-core",
    "dep:bytes",
    "dep:hex",
    "dep:rmpv",
    "foxhole-core/net",
    "foxhole-tui/net",
]

# `rsLXMF`'s crates depend on the `rns-*` libraries via sibling-checkout paths
# (`../rsReticulum/...`), which don't exist when `rsLXMF` is fetched from git.
# Redirect those to the same pinned `rsReticulum` revision so cargo can unify the
# whole stack on one Reticulum source. (Only consulted under `--features net`.)
[patch."https://github.com/doubleailes/rsLXMF"]
rns-crypto    = { git = "https://github.com/doubleailes/rsReticulum", rev = "3b91b36f3ec7b3769327e0dd06003875953e81ee" }
rns-wire      = { git = "https://github.com/doubleailes/rsReticulum", rev = "3b91b36f3ec7b3769327e0dd06003875953e81ee" }
rns-identity  = { git = "https://github.com/doubleailes/rsReticulum", rev = "3b91b36f3ec7b3769327e0dd06003875953e81ee" }
rns-link      = { git = "https://github.com/doubleailes/rsReticulum", rev = "3b91b36f3ec7b3769327e0dd06003875953e81ee" }
rns-protocol  = { git = "https://github.com/doubleailes/rsReticulum", rev = "3b91b36f3ec7b3769327e0dd06003875953e81ee" }
rns-transport = { git = "https://github.com/doubleailes/rsReticulum", rev = "3b91b36f3ec7b3769327e0dd06003875953e81ee" }
rns-runtime   = { git = "https://github.com/doubleailes/rsReticulum", rev = "3b91b36f3ec7b3769327e0dd06003875953e81ee" }
rns-interface = { git = "https://github.com/doubleailes/rsReticulum", rev = "3b91b36f3ec7b3769327e0dd06003875953e81ee" }
