[package]
name = "foxhole"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "FoxHole — off-grid, keyboard-only, monochrome LXMF comms terminal"
readme = "README.md"
keywords = ["lxmf", "reticulum", "tui", "mesh", "off-grid"]
categories = ["command-line-utilities"]

[workspace]
members = ["crates/foxhole-micron", "crates/foxhole-cot", "crates/foxhole-map", "crates/foxhole-core", "crates/foxhole-tui", "crates/foxhole-net"]

# Shared metadata inherited by every member crate via `field.workspace = true`.
# The whole workspace ships under AGPL-3.0-or-later: the `net` build links the
# AGPL `rns-*`/`lxmf-core` stack, so a distributed combined work is AGPL anyway —
# see LICENSE and README §7. Edition 2024 needs Rust ≥ 1.85 and our own code uses
# `is_multiple_of` (stable 1.87), but the dependency tree (ratatui 0.30, time)
# raises the effective floor, so the declared MSRV is 1.88.
[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "AGPL-3.0-or-later"
authors = ["Philippe Llerena <charlesbrenten@hotmail.com>"]
repository = "https://github.com/doubleailes/foxhole"

[dependencies]
# --- FoxHole's own layers (workspace member crates) ---------------------------
# Domain model + state machine (logic only) and the terminal UI (rendering only).
# The binary wires them to the runtime and, under `net`, the live protocol stack.
foxhole-core = { path = "crates/foxhole-core" }
foxhole-tui = { path = "crates/foxhole-tui" }
# CoT codec for the intel-sharing layer; `net.rs` parses inbound `cot/xml`
# payloads with it. Dependency-free, so it costs nothing in the offline build.
foxhole-cot = { path = "crates/foxhole-cot" }

# Live networking layer (LXMF/Reticulum stack + encrypted stores). Optional so
# the default build stays dependency-light and offline; `--features net` pulls
# it (and, transitively, the heavy `rns-*`/`lxmf-core` git deps) in.
foxhole-net = { path = "crates/foxhole-net", optional = true }

# TUI framework. The crossterm backend is enabled by default.
ratatui = "0.30"

# Terminal control + async input. `event-stream` gives us `EventStream`, a
# futures Stream of input events we can multiplex with network I/O via select!.
crossterm = { version = "0.29", features = ["event-stream"] }

# Async runtime: keeps network packet processing off the render path.
tokio = { version = "1", features = ["full"] }

# Provides `StreamExt::next()` for crossterm's `EventStream` (tokio-family,
# lightweight). Avoids pulling the full `futures` crate just for one combinator.
tokio-stream = "0.1"

# --- Protocol layer (live, behind the `net` feature) ---------------------------
# The LXMF/Reticulum stack and its encrypted stores now live in the
# `foxhole-net` member crate (optional dep above); it owns the heavy `rns-*` /
# `lxmf-core` git deps. The `[patch]` block at the bottom still belongs here
# because patches are only honoured in the workspace-root manifest.

[features]
default = ["splash"]
# Native cold-boot splash: a text-only bring-up sequence that doubles as a live
# readiness monitor (see crates/foxhole-tui/src/splash.rs). Pure ASCII, no extra
# dependencies — the feature only gates FoxHole's own code; `--no-default-features`
# drops it. Forwarded to the core (state) and tui (renderer) crates.
splash = ["foxhole-core/splash", "foxhole-tui/splash"]
# Live LXMF/Reticulum protocol stack. Flips the status bar to NET:ON and brings up
# the real transport + LXMF router in `src/net.rs` (see docs/lxmf-integration.md).
# Also enables the matching net-only cfg gating in the core/tui crates.
net = [
    "dep:foxhole-net",
    "foxhole-core/net",
    "foxhole-tui/net",
]

# `rsLXMF`'s crates depend on the `rns-*` libraries via sibling-checkout paths
# (`../rsReticulum/...`), which don't exist when `rsLXMF` is fetched from git.
# Redirect those to the same pinned `rsReticulum` revision so cargo can unify the
# whole stack on one Reticulum source. (Only consulted under `--features net`.)
[patch."https://github.com/doubleailes/rsLXMF"]
rns-crypto    = { git = "https://github.com/doubleailes/rsReticulum", rev = "3b91b36f3ec7b3769327e0dd06003875953e81ee" }
rns-wire      = { git = "https://github.com/doubleailes/rsReticulum", rev = "3b91b36f3ec7b3769327e0dd06003875953e81ee" }
rns-identity  = { git = "https://github.com/doubleailes/rsReticulum", rev = "3b91b36f3ec7b3769327e0dd06003875953e81ee" }
rns-link      = { git = "https://github.com/doubleailes/rsReticulum", rev = "3b91b36f3ec7b3769327e0dd06003875953e81ee" }
rns-protocol  = { git = "https://github.com/doubleailes/rsReticulum", rev = "3b91b36f3ec7b3769327e0dd06003875953e81ee" }
rns-transport = { git = "https://github.com/doubleailes/rsReticulum", rev = "3b91b36f3ec7b3769327e0dd06003875953e81ee" }
rns-runtime   = { git = "https://github.com/doubleailes/rsReticulum", rev = "3b91b36f3ec7b3769327e0dd06003875953e81ee" }
rns-interface = { git = "https://github.com/doubleailes/rsReticulum", rev = "3b91b36f3ec7b3769327e0dd06003875953e81ee" }
