[package]
name = "foxhole-core"
version = "0.1.0"
edition = "2024"
description = "FoxHole core: domain model, state machine, config, durable storage"
license = "AGPL-3.0-or-later"

[dependencies]
# Keyboard event types routed through the state machine. (No event-stream here —
# that's the binary's concern; core only needs the key enums.)
crossterm = "0.29"
# The micron page model/parser the Browser state and page elements depend on.
foxhole-micron = { path = "../foxhole-micron" }
# The CoT codec for the intel-sharing layer (received-intel model + producers).
# Dependency-free, so the core stays light.
foxhole-cot = { path = "../foxhole-cot" }
# The World Map domain (geo, viewport, markers, zones, cities). Pure logic/data;
# the App here owns the field state and routes keys to its methods.
foxhole-map = { path = "../foxhole-map" }

[features]
# Cold-boot splash state (App::boot, BootStep). Pure flag — no extra deps.
splash = []
# Mirrors the binary's `net` feature so net-only fields/paths compile out cleanly
# offline (cfg gating only — the live stack lives in the binary crate).
net = []
