[package]
name = "foxhole-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "FoxHole core: domain model, state machine, config, durable storage"

[dependencies]
# Keyboard event types routed through the state machine. (No event-stream here —
# that's the binary's concern; core only needs the key enums.)
crossterm = { workspace = true }
# The micron page model/parser the Browser state and page elements depend on.
foxhole-micron = { workspace = true }
# The CoT codec for the intel-sharing layer (received-intel model + producers).
# Dependency-free, so the core stays light.
foxhole-cot = { workspace = true }
# The World Map domain (geo, viewport, markers, zones, cities). Pure logic/data;
# the App here owns the field state and routes keys to its methods.
foxhole-map = { workspace = true }

[features]
# Cold-boot splash state (App::boot, BootStep). Pure flag — no extra deps.
splash = []
# Mirrors the binary's `net` feature so net-only fields/paths compile out cleanly
# offline (cfg gating only — the live stack lives in the binary crate).
net = []
