[package]
name = "foxhole-cot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "FoxHole CoT (Cursor-on-Target) subset codec: the intel-sharing wire format"

# Deliberately dependency-free. The codec hand-rolls a hardened XML subset
# reader/writer (no quick-xml, no chrono) so it stays as light as `foxhole-core`,
# is reusable by other NomadNet/Reticulum tooling, and is fully unit-testable in
# isolation. See docs/intel-sharing.md (P1).
[dependencies]
