[package]
name = "foxhole-map"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "FoxHole world-map domain: geo primitives, viewport, markers, hazard zones, and the embedded city gazetteer"

[dependencies]
# The CoT codec, for `Affiliation` — a received-intel marker is tinted by it
# (`MarkerKind::Intel`). foxhole-cot is itself dependency-free (std only), so the
# map crate stays light: this is its *only* dependency. Rendering (ratatui) lives
# in foxhole-tui; the App integration (key routing, marker building from peer and
# intel state) in foxhole-core.
foxhole-cot = { workspace = true }
