[package]
name = "foxhole-micron"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Nomad Network micron page markup renderer (ratatui), used by FoxHole"

[dependencies]
# Renders micron markup into styled ratatui lines/spans.
ratatui = "0.30"
