[package]
name = "foxhole-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "FoxHole live networking layer — LXMF/Reticulum protocol stack + encrypted stores"

# This crate is only ever built when the root binary's `net` feature pulls it
# in, so its dependencies are unconditional here (no per-dep `optional`): the
# gating lives one level up. Versions/revs are inherited from the workspace root
# (`[workspace.dependencies]`), which is also where the unifying `[patch]` lives.
[dependencies]
# FoxHole's own layers. `foxhole-core` supplies the domain model (App, Config,
# storage, the net-only fields behind its `net` feature); `foxhole-cot` decodes
# inbound intel payloads.
foxhole-core = { workspace = true, features = ["net"] }
foxhole-cot = { workspace = true }

# Async runtime: keeps network packet processing off the render path.
tokio = { workspace = true }

# LXMF messaging over Reticulum, and the Reticulum crates it builds on. Pinned
# by commit in the workspace root (an AGPL combined work).
lxmf-core     = { workspace = true }
rns-crypto    = { workspace = true }
rns-wire      = { workspace = true }
rns-identity  = { workspace = true }
rns-transport = { workspace = true }
rns-runtime   = { workspace = true }

# `bytes::Bytes` is the wire-buffer type the transport's `OutboundRequest` takes.
bytes = { workspace = true }

# Hex-encode 16-byte destination hashes for display and conversation keys.
hex = { workspace = true }

# Encode Nomad Network form submissions as the msgpack request map.
rmpv = { workspace = true }
