[package]
name = "foxhole-tui"
version = "0.1.0"
edition = "2024"
description = "FoxHole terminal UI: pure &App -> frame rendering and cold-boot splash"
license = "AGPL-3.0-or-later"

[dependencies]
ratatui = "0.30"
foxhole-core = { path = "../foxhole-core" }
foxhole-micron = { path = "../foxhole-micron" }
# World Map domain types the map renderer draws (viewport, markers, zones,
# cities). The App state it reads still comes from foxhole-core.
foxhole-map = { path = "../foxhole-map" }

[features]
# Cold-boot splash renderer; pulls the matching state in core.
splash = ["foxhole-core/splash"]
# Status-bar NET indicator + net-only cfg parity with core.
net = ["foxhole-core/net"]
