[package]
name = "foxhole-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "FoxHole terminal UI: pure &App -> frame rendering and cold-boot splash"

[dependencies]
ratatui = "0.30"
foxhole-core = { path = "../foxhole-core" }
foxhole-micron = { path = "../foxhole-micron" }
# World Map domain types the map renderer draws (viewport, markers, zones,
# cities). The App state it reads still comes from foxhole-core.
foxhole-map = { path = "../foxhole-map" }

[features]
# Cold-boot splash renderer; pulls the matching state in core.
splash = ["foxhole-core/splash"]
# Status-bar NET indicator + net-only cfg parity with core.
net = ["foxhole-core/net"]
