[package]
name = "foxhole-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "FoxHole terminal UI: pure &App -> frame rendering and cold-boot splash"

[dependencies]
ratatui = { workspace = true }
foxhole-core = { workspace = true }
foxhole-micron = { workspace = true }
# World Map domain types the map renderer draws (viewport, markers, zones,
# cities). The App state it reads still comes from foxhole-core.
foxhole-map = { workspace = true }

[features]
# Cold-boot splash renderer; pulls the matching state in core.
splash = ["foxhole-core/splash"]
# Status-bar NET indicator + net-only cfg parity with core.
net = ["foxhole-core/net"]
